--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-AWS_ACCESS_KEY_ID="AKIAILQYEJPTSCRBGDZA"
-AWS_SECRET_ACCESS_KEY="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"
+AWS_ACCESS_KEY_ID="AKIAILDCUUMJEOSWHE6Q"
+AWS_SECRET_ACCESS_KEY="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"
 AWS_REGION="ap-northeast-1"
-AWS_BUCKET_NAME="chat-space-shinji"
+AWS_BUCKET_NAME="copy-retty"
 AWS_BUCKET_URL="https://s3-ap-northeast-1.amazonaws.com/copy-retty"
